# claudepulse

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: aggregator.rs  commands.rs  lib.rs  main.rs  models.rs  parser.rs  settings.rs  watcher.rs
src/components/CostEstimate/: CostEstimate.module.css  CostEstimate.tsx  index.ts
src/components/ModelBreakdown/: ModelBreakdown.module.css  ModelBreakdown.tsx  index.ts
src/components/SettingsPanel/: SettingsPanel.module.css  SettingsPanel.tsx
src/components/UsageHeader/: UsageHeader.module.css  UsageHeader.tsx  index.ts
src/components/UsageMeter/: UsageMeter.module.css  UsageMeter.tsx  index.ts
src/components/WeeklyCard/: WeeklyCard.module.css  WeeklyCard.tsx  index.ts
src/components/WindowCard/: WindowCard.module.css  WindowCard.tsx  index.ts
src/hooks/: useSettings.ts  useTheme.ts  useUsageData.ts
src/lib/: format.ts
src/styles/: global.css  theme.css
src/test/: setup.ts
src/types/: index.ts
tests/components/: App.test.tsx  ModelBreakdown.test.tsx  WindowCard.test.tsx
tests/lib/: format.test.ts
